unpackaged/main/default/objects/Service_Line_Item_Delete_History__c/Service_Line_Item_Delete_History__c.object-meta.xml
<CustomObject>
    <description>For capturing Service Line Item deletions details</description>
    <label>Service Line Item Delete History</label>
    <nameField>
        <displayFormat>SLID-{YY}{MM}{DD}{00000}</displayFormat>
        <label>Service Line Item Delete History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Line Item Delete Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>