unpackaged/main/default/objects/Service_Line_Item_Delete_History__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Line Item Delete Histories</relationshipLabel>
    <relationshipName>Service_Line_Item_Delete_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>