unpackaged/main/default/objects/Service_Line_Item_Delete_History__c/fields/Service_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Line Item</label>
    <referenceTo>FSL_Service_Line_Item__c</referenceTo>
    <relationshipLabel>Service Line Item Delete Histories</relationshipLabel>
    <relationshipName>Service_Line_Item_Delete_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>