unpackaged/main/default/objects/Service_Line_Item_Delete_History__c/fields/SLI_Name__c.field-meta.xml
<CustomField>
    <fullName>SLI_Name__c</fullName>
    <label>SLI Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>